--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "redux-thunk": "^2.3.0",
     "sass": "^1.54.9",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11",
+    "@react-buddy/ide-toolbox": "^2.2.1",
+    "@react-buddy/palette-mui": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
